test/sema/traits/uninferred_type_constraint_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

trait B {}

fn foo<T : A>(t: T): T {
  return t;
}

fn bar<T : B>(t: T): T {
  return t;
}

fn main() {
  mut x = foo;
  x = bar;
  // CHECK: [[# @LINE - 1 ]]:7: error: cannot satisfy constraint '_ : A'
  // CHECK: [[# @LINE - 2 ]]:7: error: cannot unify '(_) -> _' with '(_) -> _'
  // CHECK: [[# @LINE - 3 ]]:7: error: expected to assign '(_) -> _' but received '(_) -> _' instead
}
